--- a/scss/global.scss
+++ b/scss/global.scss
@@ -7,6 +7,7 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
+	background-color:#F5F5F5;
 }
 
 // Global Variables
@@ -16,14 +17,40 @@ $orange:#FAA21A;
 $white:#F5F5F5;
 $small-font:17px;
 $medium-font:18px;
-$large-font:26px;
+$large-font:55px;
+$font-30:30px;
+$light:300;
+$bold:700;
+
+
 
 .reset{
 	margin:0px;
 	padding: 0px;
 }
 .position{
-	max-width:1410px;
+	max-width:1440px;
 	margin:0 auto;
-	
 }
+
+.circle-orange{
+	height:8px;
+	width:8px;
+	background-color: $orange;
+	border-radius: 10px;
+}
+.circle-blue{
+	height:8px;
+	width:8px;
+	background-color: $blue;
+	border-radius: 10px;
+	margin:0px 15px;
+}
+.circle-white{
+	height:8px;
+	width:8px;
+	background-color: $white;
+	border-radius: 10px;
+	margin:0px 15px;
+}
+
