--- a/scss/template/hero.scss
+++ b/scss/template/hero.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     color:$white;
+    position: relative;
     .background{
         opacity: 0.3;
         background:rgb(250, 160, 25); 
