--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,7 @@
 
 @import "template/nav";
 @import "template/hero";
-@import "template/about"
+@import "template/about";
+@import "template/activity";
+@import "template/workshops";
+@import "template/orgTeam";
