--- a/scss/template/nav.scss
+++ b/scss/template/nav.scss
@@ -4,18 +4,15 @@
 
     background:$blue;
     padding:10px 15px;
-    .position{
-        max-width:1440px;
-        margin:0 auto;        
-    }
+
     a{
         color:$white;
         font-size: $small-font;
-        padding:0px 20px;
+        // padding:0px 20px;
         font-weight: 700;
+        margin-right:30px;
     }
 }
-
 
 
    .navigation{
@@ -24,6 +21,7 @@
      #navigation{
          background:$white !important; 
          max-width: 1440px !important;
+         margin:0 auto;
          .brand{
             a{
                 font-size: $small-font;
@@ -43,7 +41,7 @@
              ul{
                 li{
                     list-style-type: none;
-                    margin:10px;
+                    margin:30px;
              .dropdown-toggle:hover::after{
                 
                     padding:15px;
@@ -53,7 +51,7 @@
                     a{
                         font-size: $small-font;
                         font-weight: 600;
-                        padding:15px;
+                        // padding:15px;
                         text-decoration: none;
                         color:$blue;
                       
