--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 /* Template segments */
 
 @import "template/nav";
+@import "template/footer";
 @import "template/hero";
 @import "template/about";
 @import "template/activity";
