--- a/scss/template/orgTeam.scss
+++ b/scss/template/orgTeam.scss
@@ -1,6 +1,7 @@
 .orgTeam{
 
     background-color:rgb(250, 160, 25); 
+    padding:80px 0px 50px;
     // z-index: 2;
 //ADD BACKGROUND HERE
     h1{
@@ -55,6 +56,8 @@
         }
         
     }
+
+
 }
 
 
