--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,3 +11,4 @@
 @import "template/workshops";
 @import "template/orgTeam";
 @import "template/participants";
+@import "template/announcement-nav";
