--- a/scss/template/activity.scss
+++ b/scss/template/activity.scss
@@ -1,13 +1,12 @@
 .third{
-    
     background-color:$blue;
     position: relative;
-    padding: 80px;
+    padding: 80px 0px 80px 0px;
     text-align: right;
-
+    
     .content{
         text-align: center;
-       
+        
         .circle{
             margin:0 auto;
         }
@@ -17,11 +16,9 @@
             margin:50px 0px 50px 0px;
         }
         .box{ 
-            padding:20px 30px;
+            padding:30px 30px;
             background-color:$white;
             margin:20px;
-         
-           
             
             h2{
                 font-size: $font-30;
@@ -34,11 +31,12 @@
                 width:40%;
                 background-color: $orange;
                 margin:0 auto;
+                margin-bottom: 20px;
             }
             p{
                 // width:0%;
                 color:$blue;
-                margin-bottom: 30px;
+                margin-bottom:20px;
                 text-align: left;
                 font-size: 18px;
             }
@@ -110,8 +108,8 @@
                 @keyframes bubble-move{
                     0%{
                         transform:translateX(450px);
-                      visibility: visible;
-                      opacity: 0;
+                        visibility: visible;
+                        opacity: 0;
                     }
                     100%{
                         transform:translateX(20px);
@@ -138,20 +136,41 @@
         }
     }
     //many more
- .more{
-     margin:0 auto;
-    h5{
-        color:$white;
-        margin:50px 0px 10px 0px ;
-        
-
+    .more{
+        margin:0 auto;
+        h5{
+            color:$white;
+            margin:50px 0px 10px 0px ;
+            
+            
+        }
+        hr{
+            height:3px;
+            background-color: $white;
+            width:100%;
+        }
     }
-    hr{
-        height:3px;
-        background-color: $white;
-        width:100%;
+    
+    .skew{
+        width:50%;
+        height:100px;
+        background-color:$blue;
+        position: absolute;
+        transform: skew(0,3deg);
+        z-index: 6;
+        margin:0px;
+        left:0px;
     }
- }
+    .skewRight{
+        width:50%;
+        height:100px;
+        background-color:$blue;
+        position: absolute;
+        transform: skew(0,-3deg);
+        z-index:5;
+        right:0px;
+        margin:0px;
+    }
 }
 
 
