--- a/scss/template/workshops.scss
+++ b/scss/template/workshops.scss
@@ -1,5 +1,28 @@
 .workshops{
-  
+    padding:120px 0px 50px 0px;
+    
+    
+    .skew{
+        width:50%;
+        height:100px;
+        background-color:$white;
+        position: absolute;
+        transform: skew(0,3deg);
+        z-index: 6;
+        margin:0px;
+        left:0px;
+        
+    }
+    .skewRight{
+        width:50%;
+        height:100px;
+        background-color:$white;
+        position: absolute;
+        transform: skew(0,-3deg);
+        z-index:5;
+        right:0px;
+        margin:0px;
+    }
     h1{
         font-size: $large-font;
         font-weight: 300;
@@ -8,7 +31,7 @@
     }
     p{
         font-size: 24px;
-    
+        
         color:$blue;
         font-weight: $light;
         line-height: 32px;
@@ -19,4 +42,7 @@
             color:$blue;
         }
     }
+    
+    
+    
 }
