--- a/scss/template/announcement-nav.scss
+++ b/scss/template/announcement-nav.scss
@@ -1,5 +1,38 @@
 #announcement{
 
 background-color:$orange; 
+.position{
+    overflow: hidden;
+
+}
+a{
+    font-size:15px;
+    padding:5px 0px 5px 30px;
+    font-weight: bolder;
+    color:$white;
+    animation: announcement-move 5s ease infinite;
+
+    // @keyframes announcement-move {
+
+
+    //     0%{
+    //         transform: translateX(200px);
+    //     }
+    
+      
+    //     50%{
+    //         transform:translateX(-650px);
+    //     }
+  
+    //     75%{
+
+    //         transform:translateX(-650px);
+    //     }
+    //     100%{
+    //         transform: translateX(-1740px);
+    //     }
+        
+    // }
+}
 
 }
