--- a/scss/template/contact.scss
+++ b/scss/template/contact.scss
@@ -1,23 +1,50 @@
 .contact{
-    
-    
+    color:$blue;
     h1{
-        
         font-size: $large-font;
         color:$blue;
+        padding:80px 0px 40px 0px
     }
+    
     .address{
-        margin:0 auto;
-        
-        
         h2{
-            color:$blue;
-            font-size: 30px;
+            font-size: 24px;
         }
         hr{
-            height:1px;
+            height: 2px;
             background-color: $orange;
-            width:100%;
+            width:100% !important;
         }
+        text-align: center;
+        
+        form{
+            label{
+                text-align: left;
+            }
+            button{
+                
+                background:$orange;
+                border:none;
+                padding:14px 30px;
+                border-radius: 25px;
+                color:$blue;
+                font-weight: bolder;
+                font-size: 15px;
+                margin-bottom:80px;
+            }
+            div{
+                margin:10px 0px;
+                input, textarea{
+                    border-radius: 5px;
+                    border:1px solid #ababab;
+                    background-color: #f9f9f9;
+                    font-size: 15px;
+                    padding: 10px;
+                }
+            }
+
+        }
+        
     }
+    
 }
