--- a/scss/template/announcement-nav.scss
+++ b/scss/template/announcement-nav.scss
@@ -9,30 +9,19 @@ a{
     font-size:15px;
     padding:5px 0px 5px 30px;
     font-weight: bolder;
-    color:$white;
-    animation: announcement-move 5s ease infinite;
+    color:$blue;
+    animation: announcement-move 30s  infinite;
 
-    // @keyframes announcement-move {
+    @keyframes announcement-move {
 
-
-    //     0%{
-    //         transform: translateX(200px);
-    //     }
-    
+        0%{
+            transform: translate(-1000px);
+        }
+        100%{
+            transform: translate(1440px);
+        }
       
-    //     50%{
-    //         transform:translateX(-650px);
-    //     }
-  
-    //     75%{
 
-    //         transform:translateX(-650px);
-    //     }
-    //     100%{
-    //         transform: translateX(-1740px);
-    //     }
-        
-    // }
 }
-
+}
 }
