--- a/scss/template/contact.scss
+++ b/scss/template/contact.scss
@@ -7,8 +7,11 @@
     }
     
     .address{
+      
         h2{
             font-size: 24px;
+            margin:80px 0px 0px 0px;
+         
         }
         hr{
             height: 2px;
@@ -16,7 +19,10 @@
             width:100% !important;
         }
         text-align: center;
-        
+        img{
+         height:300px;   
+         margin-top: 70px;
+        }
         form{
             label{
                 text-align: left;
@@ -30,7 +36,7 @@
                 color:$blue;
                 font-weight: bolder;
                 font-size: 15px;
-                margin-bottom:80px;
+                margin-bottom:150px;
             }
             div{
                 margin:10px 0px;
