--- a/scss/QUESTIONS.SCSS
+++ b/scss/QUESTIONS.SCSS
@@ -15,3 +15,4 @@
 // 4. ADD SCROLL button
 // 5. ADD BACK HOME BUTTON
 // 6. NAPRAVITI NOVI DROPDOWN U DROPDOWNU
+// 7. U GALERIJI NAPRAVI DA SE NA KLIK ISWIB 2017 POJAVE ISWIB2017 SLIKE SA NASLOVOM IWIB 2017 etc
