--- a/scss/template/hero.scss
+++ b/scss/template/hero.scss
@@ -1,19 +1,40 @@
+.background{
+
 .hero{
-    
-    background-color: $orange;
+    background-color: rgba( #FAA21A, $alpha: 1);
     position: relative;
-&::before{
-    background-image: url('../img/mainHero.jpg');
-    background-position: center;
-    background-blend-mode: overlay;
-    width:auto;
-    height:600px;
-    content:"";
-}
+    background-image: url('../img/mainHero5.png');
+    background-blend-mode: overlay;   
+
+    &::before{
+        width: 0;
+        height: 0;
+        border-bottom: 100px solid $white;
+        border-left: 50vw solid transparent;
+        position: absolute;
+        bottom:0;
+        right:0px;
+        margin:0;
+        padding:0;
+        content:"";
+    }
+    &::after{
+        width: 0;
+        height: 0;
+        border-bottom: 100px solid $white;
+        border-right: 50vw solid transparent;
+        position: absolute;
+        bottom:0;
+        left:0px;
+        margin:0;
+        padding:0;
+        content:"";
+    }
+
+
     .content{
-        padding-top:10%;
-        padding-bottom: 8%;
-      
+        padding-top:15%;
+        padding-bottom: 15%;
         display: flex;
         flex-direction:column;
         
@@ -56,12 +77,29 @@
         top:90%;
     }
 }
-@media only screen and (max-width: 600px) {
-   
-    h1{
-font-size:80px;
-    }
+
 }
+// .hero{
+    
+//     background-color: $orange;
+//     margin:0 auto;
+//     padding:0px;
+
+
+
+
+
+// .hero2{
+
+
+
+// }
+
+
+
+// }
+
+
 
 
 
