--- a/scss/QUESTIONS.SCSS
+++ b/scss/QUESTIONS.SCSS
@@ -1,8 +1,8 @@
-// 1. How to overlay image 
-// 2. How to add custom icons to API (verovatno if cloudy add clouds
-// 3. How to change template hamburger icon and dropdown background;
-// 4. Best way to make my dropdown form
-// 5. add a tag to And many more on  Activities section/ Landing page
+
+// 2. How to add custom icons to API (verovatno if cloudy add clouds)//
+// 3. How to change template hamburger icon and dropdown background; //inspect
+// 4. Best way to make my dropdown form//
+
 
 
 
@@ -16,3 +16,4 @@
 // 5. ADD BACK HOME BUTTON
 // 6. NAPRAVITI NOVI DROPDOWN U DROPDOWNU
 // 7. U GALERIJI NAPRAVI DA SE NA KLIK ISWIB 2017 POJAVE ISWIB2017 SLIKE SA NASLOVOM IWIB 2017 etc
+// 5. add a tag to And many more on  Activities section/ Landing page
