--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,6 @@
 @import "template/orgTeam";
 @import "template/participants";
 @import "template/announcement-nav";
-@import "template/cover";
+@import "template/contact-header";
 @import "template/contact";
 @import "template/gallery";
