--- a/scss/template/hero.scss
+++ b/scss/template/hero.scss
@@ -46,17 +46,21 @@
             h1{
                 font-size:150px;
                 color:$white;
-              
+                animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
             }
-   
+            
             h4{
-                padding-bottom: 100px;
+                padding-bottom: 70px;
                 text-align: left;
-               
-                  
+                animation: fade-in 0.8s ease;
             }
         }
-        
+
+        h5{
+            margin:30px;
+            animation: fade-in 0.8s ease;
+
+        }
         .skew{
             width:50%;
             height:100px;
@@ -77,8 +81,9 @@
             margin:0px;
             top:90%;
         }
+        
+        
     }
     
-}
-
-
+    
+} 
