--- a/scss/template/gallery.scss
+++ b/scss/template/gallery.scss
@@ -25,7 +25,8 @@
     }
     
     .img{
-        max-width:150px;
+        
+            // width:150px;
         height:150px;
         overflow: hidden;
         border:5px solid $orange;
