--- a/scss/template/contact.scss
+++ b/scss/template/contact.scss
@@ -49,6 +49,10 @@
                     font-size: 15px;
                     padding: 10px;
                 }
+
+                p{
+                    font-size: 15px;
+                }
             }
 
         }
