--- a/scss/QUESTIONS.SCSS
+++ b/scss/QUESTIONS.SCSS
@@ -10,7 +10,7 @@
 // URADITI
 
 // 1. GALERIJA
-// 2. FORM VALIDATION
+// 2. FORM VALIDATION done
 // 3. FIX MOVING NAVIGATION
 // 4. ADD SCROLL button
 // 5. ADD BACK HOME BUTTON
