--- a/scss/QUESTIONS.SCSS
+++ b/scss/QUESTIONS.SCSS
@@ -10,10 +10,10 @@
 // URADITI
 
 // 1. GALERIJA
-// 2. FORM VALIDATION done
+// 2. FORM VALIDATION done //
 // 3. FIX MOVING NAVIGATION
 // 4. ADD SCROLL button
-// 5. ADD BACK HOME BUTTON
+// 5. ADD BACK HOME BUTTON//
 // 6. NAPRAVITI NOVI DROPDOWN U DROPDOWNU
 // 7. U GALERIJI NAPRAVI DA SE NA KLIK ISWIB 2017 POJAVE ISWIB2017 SLIKE SA NASLOVOM IWIB 2017 etc
 // 5. add a tag to And many more on  Activities section/ Landing page
