--- a/scss/global.scss
+++ b/scss/global.scss
@@ -59,45 +59,56 @@ $padding:80px 0px 40px 0px;
 }
 
 .footer-border{
-    border-top: 1px solid $blue;
+	border-top: 1px solid $blue;
 }
 @keyframes tracking-in-expand {
 	0% {
-	  letter-spacing: -0.5em;
-	  opacity: 0;
+		letter-spacing: -0.5em;
+		opacity: 0;
 	}
 	40% {
-	  opacity: 0.6;
+		opacity: 0.6;
 	}
 	100% {
-	  opacity: 1;
+		opacity: 1;
 	}
-  }
-  
-  
-  @keyframes slide-in-top {
-	0% {
-	  -webkit-transform: translateY(-1000px);
-			  transform: translateY(-1000px);
-	  opacity: 0;
-	}
+}
 
+
+@keyframes slide-in-top {
+	0% {
+		-webkit-transform: translateY(-1000px);
+		transform: translateY(-1000px);
+		opacity: 0;
+	}
+	
 	40%{
 		opacity:0.5;
 	}
 	100% {
-	  -webkit-transform: translateY(0);
-			  transform: translateY(0);
-	  opacity: 1;
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+		opacity: 1;
 	}
-  }
+}
 
-  @keyframes fade-in{
-
+@keyframes fade-in{
+	
 	0%{
 		opacity:0;
 	}
 	100%{
 		opacity:1;
 	}
-  }
+}
+
+
+
+.sticky{
+	
+	position:sticky;
+	top:0px;
+	left:0px;
+	z-index:5;
+	
+}
