--- a/scss/template/announcement-nav.scss
+++ b/scss/template/announcement-nav.scss
@@ -6,22 +6,23 @@ background-color:$orange;
 
 }
 a{
+
     font-size:15px;
     padding:5px 0px 5px 30px;
     font-weight: bolder;
     color:$blue;
-    animation: announcement-move 30s  infinite;
+    // animation: announcement-move 30s  infinite;
 
-    @keyframes announcement-move {
+    // @keyframes announcement-move {
 
-        0%{
-            transform: translate(-1000px);
-        }
-        100%{
-            transform: translate(1440px);
-        }
+    //     0%{
+    //         transform: translate(-1000px);
+    //     }
+    //     100%{
+    //         transform: translate(1440px);
+    //     }
       
 
-}
+// }
 }
 }
