--- a/scss/template/nav.scss
+++ b/scss/template/nav.scss
@@ -30,7 +30,7 @@
             font-weight: 600;
         }
         #balloon{
-            
+   
             fill:$blue;
             &:hover{
                 transform: scale(1.05);
@@ -42,7 +42,7 @@
         ul{
             li{
                 list-style-type: none;
-                margin:15px;
+                margin: 0px 15px;
                 a{
                     font-size: $small-font;
                     font-weight: 600;
@@ -73,12 +73,6 @@
     }
 }
 
-.sticky{
-
-    position:sticky;
-    top:0px;
-    left:0px;
-}
 
 
 
