--- a/scss/global.scss
+++ b/scss/global.scss
@@ -103,14 +103,23 @@ $padding:80px 0px 40px 0px;
 }
 
 
-
-.sticky{
-	
+// navigation stick
+.sticky{	
 	position:sticky;
 	top:0px;
 	left:0px;
 	z-index:5;
-	transition: ease;
-
-	
+	transition:1s ease-in-out;	
 }
+
+//  buttons
+     .button-orange{
+                font-size:$medium-font;
+                padding:10px 40px;
+                background-color: $orange;
+                border-radius: 30px;
+                font-weight:$bold;
+                color:$blue;
+			}
+			
+			
