--- a/scss/template/activity.scss
+++ b/scss/template/activity.scss
@@ -41,14 +41,7 @@
                 font-size: 18px;
             }
             
-            .button-orange{
-                font-size:$medium-font;
-                padding:10px 40px;
-                background-color: $orange;
-                border-radius: 30px;
-                font-weight:$bold;
-                color:$blue;
-            }
+       
             
             &:hover #wheel{
                 
@@ -138,9 +131,10 @@
     //many more
     .more{
         margin:0 auto;
-        h5{
+        a{
             color:$white;
-            margin:50px 0px 10px 0px ;
+            // margin:50px 0px 5px 0px ;
+            padding:0;
             
             
         }
@@ -148,29 +142,11 @@
             height:3px;
             background-color: $white;
             width:100%;
+            margin:10px 0px 20px 0px;;
         }
     }
     
-    .skew{
-        width:50%;
-        height:100px;
-        background-color:$blue;
-        position: absolute;
-        transform: skew(0,3deg);
-        z-index: 6;
-        margin:0px;
-        left:0px;
-    }
-    .skewRight{
-        width:50%;
-        height:100px;
-        background-color:$blue;
-        position: absolute;
-        transform: skew(0,-3deg);
-        z-index:5;
-        right:0px;
-        margin:0px;
-    }
+
 }
 
 
