--- a/scss/template/hero.scss
+++ b/scss/template/hero.scss
@@ -1,40 +1,57 @@
 
 .hero{
+    
     background-color: rgba( #FAA21A, $alpha: 1);
+    z-index: -2;
     position: relative;
-    // background-image: url('../img/mainHero5.png');
-    background-blend-mode: overlay;  
+    
     &::before{
-        width: 0;
-        height: 0;
-        border-bottom: 100px solid $white;
-        border-left: 50vw solid transparent;
-        position: absolute;
-        bottom:0;
-        right:0px;
-        margin:0;
-        padding:0;
-        content:"";
+        content: ''; 
+        width: 100%; 
+        height: 100%;
+        background-color: rgba($color: #FAA21A, $alpha: 1);  
+        opacity: 0.5;
+        position: absolute; 
+        top: 0; 
+        left: 0;
+        z-index: -1;
+        background-image: url('../img/mainHero.jpg');
+        background-blend-mode: overlay;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
-    &::after{
-        width: 0;
-        height: 0;
-        border-bottom: 100px solid $white;
-        border-right: 50vw solid transparent;
-        position: absolute;
-        bottom:0;
-        left:0px;
-        margin:0;
-        padding:0;
-        content:"";
-    }
-    .hero2{
+    .hero-container{
         
-        
-        
+        &::before{
+            width: 0;
+            height: 0;
+            border-bottom: 100px solid $white;
+            border-left: 50vw solid transparent;
+            position: absolute;
+            bottom:0;
+            right:0px;
+            margin:0;
+            padding:0;
+            content:"";
+        }
+        &::after{
+            width: 0;
+            height: 0;
+            border-bottom: 100px solid $white;
+            border-right: 50vw solid transparent;
+            position: absolute;
+            bottom:0;
+            left:0px;
+            margin:0;
+            padding:0;
+            content:"";
+        }
         .content{
             padding-top:15%;
             padding-bottom: 15%;
+            display: flex;
+            flex-direction:column;
             display: flex;
             flex-direction:column;
             
@@ -50,40 +67,66 @@
             }
             
             h4{
-                padding-bottom: 70px;
+                padding-bottom: 10%;
                 text-align: left;
                 animation: fade-in 0.8s ease;
             }
         }
-
+        
         h5{
             margin:30px;
             animation: fade-in 0.8s ease;
+            
+        }
 
-        }
-        .skew{
-            width:50%;
-            height:100px;
-            background-color:$orange;
-            position: absolute;
-            transform: skew(0,3deg);
-            margin:0px;
-            left:0px;
-            top:90%
-        }
-        .skewRight{
-            width:50%;
-            height:100px;
-            background-color:$orange;
-            position: absolute;
-            transform: skew(0,-3deg);
-            right:0px;
-            margin:0px;
-            top:90%;
-        }
         
         
     }
     
     
 } 
+
+
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 576px) and (max-width: 991.98px) { 
+    
+    .hero{
+        
+        h1{
+            font-size: 100px !important;
+            transition:1s ease;
+        }
+        
+        
+        
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    
+    .hero{
+        
+        h1{
+            font-size: 80px !important;
+            transition:1s ease;
+        }
+        
+    }
+    
+}
+@media (max-width: 575.98px) {
+    .hero{
+        h5,h4{
+            font-size: 10px;
+        }
+        h1{
+            font-size: 40px !important;
+            transition:1s ease;
+        }
+        h5{
+            margin:0px !important;
+        }
+    }
+  }
