--- a/scss/template/nav.scss
+++ b/scss/template/nav.scss
@@ -4,7 +4,7 @@
     
     background:$blue;
     padding:10px 15px;
-    transition: 1s  all ease;
+    transition: 1s   ease-in-out;
     
     
     a{
@@ -21,7 +21,7 @@
     background:$white;
     width:100%;
     margin:0 auto;
-    transition: 1s ease;
+    transition: 1s ease-in-out;
   
     .brand{
         a{
