--- a/scss/template/orgTeam.scss
+++ b/scss/template/orgTeam.scss
@@ -2,8 +2,24 @@
 
     background-color:rgb(250, 160, 25); 
     padding:80px 0px 50px;
-    // z-index: 2;
-//ADD BACKGROUND HERE
+    position: relative;
+    z-index: -2;
+&::before{
+    content: ''; 
+    width: 100%; 
+    height: 100%;
+    background-color: rgba($color: #FAA21A, $alpha: 1);  
+    opacity: 0.2;
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    z-index: -1;
+    background-image: url('../img/hero3.png');
+    background-blend-mode: overlay;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
     h1{
         font-size: $large-font;
         font-weight: lighter;
