--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,9 +10,9 @@
 @import "template/activity";
 @import "template/workshops";
 @import "template/orgTeam";
-@import "template/participants";
 @import "template/announcement-nav";
 @import "template/contact-header";
 @import "template/contact";
 @import "template/gallery";
 @import "template/back-home";
+@import "blueimp-gallery.min"
