--- a/scss/QUESTIONS.SCSS
+++ b/scss/QUESTIONS.SCSS
@@ -11,7 +11,7 @@
 
 // 1. GALERIJA
 // 2. FORM VALIDATION done //
-// 3. FIX MOVING NAVIGATION
+// 3. FIX MOVING NAVIGATION //
 // 4. ADD SCROLL button
 // 5. ADD BACK HOME BUTTON//
 // 6. NAPRAVITI NOVI DROPDOWN U DROPDOWNU
