--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,4 +15,4 @@
 @import "template/contact";
 @import "template/gallery";
 @import "template/back-home";
-@import "blueimp-gallery.min"
+@import "blueimp-gallery.min";
