--- a/scss/template/gallery.scss
+++ b/scss/template/gallery.scss
@@ -3,7 +3,7 @@
     h1{
         font-size: $large-font;
         color:$blue;
-        padding:80px 0px 40px 0px;
+        padding:0px 0px 40px 0px;
     }
     ul{
         padding:20px 0px 10px 0px;
@@ -24,10 +24,11 @@
         margin:0px;
     }
     
-    .img{
-        
+    .thumbnail{
+        height: 300px;
+        width:300px;
         overflow: hidden;
-        border:5px solid $orange;
+        border:10px solid $blue;
         padding:0px;
         margin:20px;
         background-color: $blue;
