--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,4 +16,4 @@
 @import "template/gallery";
 @import "template/back-home";
 @import "blueimp-gallery.min";
-@import "back-to-top";
+@import "template/back-to-top";
