--- a/scss/template/back-to-top.scss
+++ b/scss/template/back-to-top.scss
@@ -1,4 +1,12 @@
-#backToTop{
-
-    transform: rotate(90deg);
+#back-to-top{
+    padding:7px;
+    border: 3px solid $blue;
+    margin-top:80px;
+    border-radius: 50px;
+    transition: 0.2s ease-in-out;
+    height:50px;
+    width:50px;
+    &:hover{
+    padding:3px;
+    }
 }
