--- a/scss/template/back-to-top.scss
+++ b/scss/template/back-to-top.scss
@@ -6,7 +6,12 @@
     transition: 0.2s ease-in-out;
     height:50px;
     width:50px;
+    // position: fixed;
+    // bottom:0;
+    // right:0;
+    cursor: pointer;
     &:hover{
     padding:3px;
     }
 }
+
