--- a/scss/template/contact-header.scss
+++ b/scss/template/contact-header.scss
@@ -5,6 +5,8 @@
     position: relative;
     background-image: url('../img/cover.jpg');
    height:50vh;
+   background-repeat: no-repeat;
+   background-size: cover;
 
     &::before{
         width: 0;
