--- a/scss/template/about.scss
+++ b/scss/template/about.scss
@@ -13,7 +13,7 @@
         right:0px;
         margin:0;
         padding:0;
-        content:"LOL";
+        content:"";
     }
     &::after{
         width: 0;
