--- a/scss/template/nav.scss
+++ b/scss/template/nav.scss
@@ -7,7 +7,7 @@
     // transition: 0.5s   ease-in-out;
     
     
-    a{
+    p{
         color:$white;
         font-size: $small-font;
         // padding:0px 20px;
