--- a/scss/template/back-to-top.scss
+++ b/scss/template/back-to-top.scss
@@ -18,7 +18,7 @@
 
 .back-fixed{
 	position:fixed;
-    
+    right:10%;
 	bottom:0;
 	z-index:999;
 	background-color: rgba($color: #F5F5F5, $alpha: 1);
