--- a/scss/template/contact.scss
+++ b/scss/template/contact.scss
@@ -5,9 +5,6 @@
         color:$blue;
         padding:80px 0px 40px 0px
     }
-    
-    
-
     .address{
       
         h2{
@@ -22,12 +19,13 @@
         }
         text-align: center;
         img{
-         height:300px;   
+       max-width:100%;
          margin-top: 70px;
         }
         form{
             label{
                 text-align: left;
+                font-size: 15px;
             }
             button{
                 
