--- a/scss/template/back-to-top.scss
+++ b/scss/template/back-to-top.scss
@@ -18,8 +18,8 @@
 
 .back-fixed{
 	position:fixed;
-    right:10%;
-	bottom:0;
+    right:20px;
+	bottom:0px;
 	z-index:999;
 	background-color: rgba($color: #F5F5F5, $alpha: 1);
 }	
